Fix shoepage layout shift

--- a/src/components/ImageView/ImageView.module.css
+++ b/src/components/ImageView/ImageView.module.css
@@ -54,10 +54,11 @@
     display: none;
     
     @media (min-width: 421px) {
-      display: flex;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 100px);
       align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
+      justify-content: center;
+      gap: 2rem 1rem;
       margin-top: 2rem;
     }
   }
